...
    <!-- Label on a button that is one possible answer to the question "Are you attending the
    conference in person in San Francisco or remotely via livestream?" -->
    <string name="attending_remotely">Remotely</string>

    <!-- Label on a button that allows the user to see what conference sessions are available
    at a particular time. -->
    <string name="browse_sessions">BROWSE SESSIONS</string>

    <!-- Shown on Configure WiFi dialog, instructing user on what button to click. -->
    <string name="calltoaction_wifi_configure"><![CDATA[
        <br><br>Tap \'Add Wi-Fi Network\' to proceed.
    ]]></string>

...
